Added R CMC check GitHub action.

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # ino
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/loelschlaeger/ino/workflows/R-CMD-check/badge.svg)](https://github.com/loelschlaeger/ino/actions)
 <!-- badges: end -->
 
 The goal of ino is to initialize numerical optimization.
