--- a/vignettes/ino-workflow.Rmd
+++ b/vignettes/ino-workflow.Rmd
@@ -35,8 +35,7 @@ The package consists of three types of functions:
 3. Functions that *evaluate* the initializations. They summarize and visualize the gathered knowledge.
 
 ```{r, echo = FALSE}
-library(DiagrammeR)
-mermaid(diagram = '
+DiagrammeR::mermaid(diagram = '
 sequenceDiagram
   participant specify
   Note left of specify: Specify the optimization problem.
