--- a/vignettes/fixed-initialization.Rmd
+++ b/vignettes/fixed-initialization.Rmd
@@ -4,7 +4,7 @@ author: ""
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{fixed-initialization}
+  %\VignetteIndexEntry{Fixed initialization}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
