--- a/vignettes/ino-workflow.Rmd
+++ b/vignettes/ino-workflow.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-This vignette describes the workflow for using ino. It introduces [the `ino` object](#the-ino-object), gives an overview over the [three different function types](#three-different-function-types) implemented in the package, and subsequently presents [an example workflow](#an-example-workflow).
+This vignette describes the workflow for using ino. It introduces [the `ino` object](#the-ino-object), gives an overview over the [three different function types](#three-different-function-types) implemented in the package, and subsequently presents [an example workflow](#an-example-workflow). The vignette was build using R `r paste(R.Version()[6:7], collapse = ".")` with the ino `r utils::packageVersion("ino")` package.
 
 ## The `ino` object
 
@@ -65,69 +65,63 @@ library(magrittr) # Used for better code readability.
 
 ### 1. Specify the optimization problem
 
-Say we want to numerically minimize the [Ackley function](https://en.wikipedia.org/wiki/Ackley_function).
-
-```{r, define function}
-ackley <- function(x) -20*exp(-0.2*sqrt(0.5*(x[1]^2+x[2]^2)))-exp(0.5*(cos(2*pi*x[1])+cos(2*pi*x[2])))+exp(1)+20
-```
-
-The function is known to have multiple minima and one global minimum in $x = (0,0)$, so to avoid ending up at an inferior minimum it is worth putting a thought on the initialization.
+Some functions are implemented in ino for demonstrations, for example the [Ackley function](https://en.wikipedia.org/wiki/Ackley_function). The function is known to have multiple local minima and one global minimum in $x = (0,0)$, so to avoid ending up at an inferior minimum it is worth putting a thought on the initialization.
 
 ```{r, visualize function, fig.cap = "Contour plot of the Ackley function"}
 x <- y <- seq(-5,5,0.1)
-z <- outer(x, y, Vectorize(function(x,y) ackley(c(x,y))))
+z <- outer(x, y, Vectorize(function(x,y) ino:::f_ackley(c(x,y))))
 contour(x, y, z)
 ```
-<!-- TODO: Add better visualization. Perheps own visualization function? -->
+<!-- TODO: Improve visualization. -->
 
 We introduce the function to ino via:
 
 ```{r, introduce f}
-analysis <- ackley %>% set_f(npar = 2)
+analysis <- set_f(f = ino:::f_ackley, npar = 2)
 ```
 
 This creates the object `analysis` which is an object of class `ino`. Insights about the initialization will be saved here.
 
-> Remark: If your function is a likelihood function, then this is the right time to also introduce your dataset(s) to ino. See the vignette ... on how to do this.
+> Remark: If your function is a likelihood function, then this is the right time to also introduce your dataset(s) to ino. See the vignette "Specification functions" on how to do this.
 
-Next, we need to specify a numerical optimizer, for example nlm from the stats package. We can also set parameters of the optimizer, for example the maximum number of iterations `iterlim`.
+Next, we need to specify a numerical optimizer, for example [nlm from the stats package](https://stat.ethz.ch/R-manual/R-devel/library/stats/html/nlm.html). We can also set parameters of the optimizer, for example the maximum number of iterations `iterlim`.
 
 ```{r, set optimizer}
-analysis %<>% set_optimizer(optimizer = "nlm")
+analysis %<>% set_optimizer(optimizer = "nlm", iterlim = 100)
 ```
 
-> Remark: You can specify a list of optimizers here to compare them. See the vignette "Specify numerical optimizer" for details.
+> Remark: You can specify a list of optimizers here to compare them. See the vignette "Specification functions" for details.
 
 Now, all is setup to try different initialization strategies.
 
 ### 2. Execute initialization strategies
 
-There is a separate function for each initialization strategy to each of which we can supply our object `analysis`. Let's try random initialization first:
+There is a separate function for each initialization strategy to each of which we can supply our `ino` object `analysis`. Let's try random initialization first:
 
 ```{r, random initialization}
-analysis %<>% random_initialization(runs = 100, lower = -10, upper = 10, sampler = "normal")
+analysis %<>% random_initialization(runs = 10)
 ```
 
-We initialized `runs = 100` times at random samples from a normal distributions restricted on the interval `lower = -10` to `upper = 10`.
+We initialized `runs = 10` times at random samples.
 
 Let's also try fixed initialization at different points:
 
 ```{r, fixed initialization}
-analysis %<>% fixed_initialization(at = list(c(0,0),c(5,5),c(10,10)))
+#analysis %<>% fixed_initialization(at = list(c(0,0),c(5,5),c(10,10)))
 ```
 
-> Remark: Each initialization strategy implemented in ino is documented in its own vignette.
+> Remark: Each initialization strategy implemented in ino is documented in the vignette "Initialization strategies".
 
 ### 3. Evaluate the results
 
 The package provides several functions to evaluate the initialization strategies, for example:
 
 ```{r, evaluate optima}
-analysis %>% optima
+#analysis %>% optima
 ```
 
 ```{r, evaluate time}
 analysis %>% optimization_time
 ```
 
-> Remark: Each evaluation function again is documented in its own vignette.
+> Remark: All evaluation functions are documented in the vignette "Evaluations".
