--- a/vignettes/ino-workflow.Rmd
+++ b/vignettes/ino-workflow.Rmd
@@ -5,10 +5,8 @@ date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Workflow for using ino}
-  %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
-editor_options: 
-  chunk_output_type: console
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
@@ -63,19 +61,15 @@ sequenceDiagram
 # install.packages("ino")
 library(ino)
 library(magrittr) # Used for better code readability.
-library(ggplot2)
 ```
 
 ### 1. Specify the optimization problem
 
 Some functions are implemented in ino for demonstrations, for example the [Ackley function](https://en.wikipedia.org/wiki/Ackley_function). The function is known to have multiple local minima and one global minimum in $x = (0,0)$, so to avoid ending up at an inferior minimum it is worth putting a thought on the initialization.
 
-<<<<<<< HEAD
-For `c <- -11` and `y <- -7`, the function is known to have one local maximum and four identical local minima, so it is worth putting a thought on the initialization.....
-
-```{r, visualize function, fig.cap = "Contour plot of the Himmelblau's function"}
-x <- y <- seq(-5, 5, 0.1)
-#z <- outer(x, y, Vectorize(function(x, y) himmelblau(c(x, y), c = -11, d = -7)))
+```{r, visualize function, fig.cap = "Contour plot of the Ackley function"}
+x <- y <- seq(-5,5,0.1)
+#z <- outer(x, y, Vectorize(function(x,y) ino:::f_ackley(c(x,y))))
 #contour(x, y, z)
 data_plot <- expand.grid(x, y)
 data_plot$z <- purrr::map2_dbl(data_plot$Var1, data_plot$Var2, function(x, y) himmelblau(c(x, y), c = -11, d = -7))
@@ -84,15 +78,7 @@ data_plot %>%
   theme_minimal() + xlab("x") + ylab("y") +
   theme(legend.title = element_blank())
 ```
-<!-- TODO: Add better visualization. Perhaps own visualization function? -->
-=======
-```{r, visualize function, fig.cap = "Contour plot of the Ackley function"}
-x <- y <- seq(-5,5,0.1)
-z <- outer(x, y, Vectorize(function(x,y) ino:::f_ackley(c(x,y))))
-contour(x, y, z)
-```
 <!-- TODO: Improve visualization. -->
->>>>>>> 14735ccdf1079208d1c3bc2698305c94a69cab56
 
 We introduce the function to ino via:
 
@@ -103,7 +89,6 @@ analysis <- set_f(f = ino:::f_ackley, npar = 2)
 This creates the object `analysis` which is an object of class `ino`. Insights about the initialization will be saved here.
 
 > Remark: If your function is a likelihood function, then this is the right time to also introduce your dataset(s) to ino. See the vignette "Specification functions" on how to do this.
-
 Next, we need to specify a numerical optimizer, for example [nlm from the stats package](https://stat.ethz.ch/R-manual/R-devel/library/stats/html/nlm.html). We can also set parameters of the optimizer, for example the maximum number of iterations `iterlim`.
 
 ```{r, set optimizer}
@@ -111,7 +96,6 @@ analysis %<>% set_optimizer(optimizer = "nlm", iterlim = 100)
 ```
 
 > Remark: You can specify a list of optimizers here to compare them. See the vignette "Specification functions" for details.
-
 Now, all is setup to try different initialization strategies.
 
 ### 2. Execute initialization strategies
@@ -131,7 +115,6 @@ Let's also try fixed initialization at different points:
 ```
 
 > Remark: Each initialization strategy implemented in ino is documented in the vignette "Initialization strategies".
-
 ### 3. Evaluate the results
 
 The package provides several functions to evaluate the initialization strategies, for example:
